[package]
name = "gawsh"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
authors = ["klardotsh <josh@klar.sh>"]

[dependencies]
anyhow = "1.0"
argh = "0.1"
colog = "1.1"
console = "0.14"
dashmap = "4.0"
git2 = { version = "0.13", default_features = false }
indexmap = "1.7"
log = "0.4"
num_cpus = "1.13"
threadpool = "1.8"

[dependencies.syntect]
version = "4.6"
default-features = false
features = ["parsing", "assets", "html", "dump-load-rs", "regex-fancy"]
