[package]
name = "gawsh"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
authors = ["klardotsh <josh@klar.sh>"]

[dependencies]
anyhow = "1.0"
argh = "0.1"
colog = "1.1"
console = "0.14"
dashmap = { version = "4.0", features = ["rayon"] }
git2 = { version = "0.13", default_features = false }
log = "0.4"
rayon = "1.5"
thread_local = "1.1"

[dependencies.syntect]
version = "4.6"
default-features = false
features = ["parsing", "assets", "html", "dump-load-rs", "regex-fancy"]
